# Input

./: .gitignore  CMakeLists.txt  NOTES.md
src/: core.hpp  evdev_subsystem.cpp  evdev_subsystem.hpp  fd_event_bus.hpp  main.cpp  math.hpp  udev_subsystem.cpp  udev_subsystem.hpp
src/example/: example-joystick.cpp  example-keyboard.cpp  example-mouse.cpp  example-udev-watch.cpp  example.cpp  example.hpp
src/input/: evdev_subsystem.cpp  evdev_subsystem.hpp  fd_event_bus.cpp  math.hpp  udev_subsystem.cpp  udev_subsystem.hpp
